# PrintFleet2

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: README  env.py
alembic/versions/: 0001_initial.py  0002_add_is_admin.py  0003_add_user_role.py  0004_add_user_profile_fields.py  0005_add_settings_theme.py  0006_add_stream_active_flags.py  0007_add_stream_titles.py  0008_add_printer_groups.py  0009_add_print_jobs.py  0010_add_print_jobs_print_via.py
docs/: Version.md
setup/: README.md  install-service.sh  install.sh  printfleet2.service.example  setup.md  setupPrintFleet2  setupPrintFleet2Service  setupPrintFleet2Telegram  update.sh  updatePrintFleet2Service
src/printfleet2/: __init__.py  __main__.py  app.py  config.py  version.py
src/printfleet2/db/: __init__.py  base.py  session.py
src/printfleet2/models/: __init__.py  print_job.py  printer.py  printer_group.py  printer_type.py  settings.py  user.py
src/printfleet2/services/: __init__.py  net_scan_service.py  print_job_service.py  printer_group_service.py  printer_service.py  printer_status_service.py  printer_type_service.py  printer_upload_service.py  settings_service.py  user_service.py
src/printfleet2/static/: live_wall.js  login.js  logs.js  printer_dashboard.js  printer_group_just.js  printer_groups.js  printer_just.js  printer_types.js  printers.js  settings.js  (+2 more)
tests/: README.md  printfleet_printer_groups_20260106_215826.json  printfleet_printer_types_20260106_214927.json  printfleet_printers_20260106_214935.json  printfleet_settings_20260106_214917.json
(+19 files in other folders)
