[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printfleet2"
version = "0.1.0"
description = "PrintFleet2 - a clean rebuild of PrintFleet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4",
  "SQLAlchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "python-dotenv>=1.0,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
